welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^Program:2: error: not found: value versLAvant
while (versLAvant && !estFaceMur()){
       ^Program:5: error: not found: value versLAvant
while (!versLAvant && !estDoseMur()){
        ^Program:5: error: not found: value estDoseMur
while (!versLAvant && !estDoseMur()){
                       ^