welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
while (versLAvant && !estFaceMur()){
  avance()
}
while (!versLAvant && !estDoseMur()){
  recule()
}